# X_O

./: CMakeLists.txt  main.cpp  qml.qrc
include/: general.h  player.h  proxy.h  registrator.h  x_oAI.h  x_omodel.h
qml/: InitWindow.qml  ProgressView.qml  main.qml
src/: general.cpp  player.cpp  proxy.cpp  registrator.cpp  x_oAI.cpp  x_omodel.cpp
test/: x_oTests.cpp
